{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 362,
  "lineage": "da7fb845-0c58-f680-4fe5-5b1dac8e0e13",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bf89f13fc937654",
            "arn": "arn:aws:ec2:ap-northeast-2:297195401389:elastic-ip/eipalloc-05bf89f13fc937654",
            "association_id": "eipassoc-0821a9617b72c1ec4",
            "domain": "vpc",
            "id": "eipalloc-05bf89f13fc937654",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0864f8a82903d2cff",
            "private_dns": "ip-10-0-1-210.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.210",
            "public_dns": "ec2-15-164-29-85.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.29.85",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:297195401389:internet-gateway/igw-065a1d5c23ef17c74",
            "id": "igw-065a1d5c23ef17c74",
            "owner_id": "297195401389",
            "tags": {
              "Name": "eks-chickpay-igw"
            },
            "tags_all": {
              "Name": "eks-chickpay-igw"
            },
            "vpc_id": "vpc-04c0a129785987422"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bf89f13fc937654",
            "association_id": "eipassoc-0821a9617b72c1ec4",
            "connectivity_type": "public",
            "id": "nat-0ac53c33cfcad40cf",
            "network_interface_id": "eni-0864f8a82903d2cff",
            "private_ip": "10.0.1.210",
            "public_ip": "15.164.29.85",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c6cda4f29da81a4d",
            "tags": {
              "Name": "chickpay-nat"
            },
            "tags_all": {
              "Name": "chickpay-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:297195401389:route-table/rtb-03ac4e245c42fe3a1",
            "id": "rtb-03ac4e245c42fe3a1",
            "owner_id": "297195401389",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ac53c33cfcad40cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chickpay-private-rt"
            },
            "tags_all": {
              "Name": "chickpay-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c0a129785987422"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:297195401389:route-table/rtb-099e625f821d3c41c",
            "id": "rtb-099e625f821d3c41c",
            "owner_id": "297195401389",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065a1d5c23ef17c74",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chickpay-public-rt"
            },
            "tags_all": {
              "Name": "chickpay-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c0a129785987422"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ced7e3848a6abb51",
            "route_table_id": "rtb-03ac4e245c42fe3a1",
            "subnet_id": "subnet-07c50fbb488103be4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be9f2cfaeb20d9f7",
            "route_table_id": "rtb-03ac4e245c42fe3a1",
            "subnet_id": "subnet-08553b05a0297ac3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09baa2a60d65c4000",
            "route_table_id": "rtb-099e625f821d3c41c",
            "subnet_id": "subnet-0c6cda4f29da81a4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8b1aa78104d46f8",
            "route_table_id": "rtb-099e625f821d3c41c",
            "subnet_id": "subnet-0643e2e887ca329d9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:297195401389:subnet/subnet-07c50fbb488103be4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c50fbb488103be4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "297195401389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chickpay-private-0",
              "kubernetes.io/cluster/eks-chickpay-service": "shared"
            },
            "tags_all": {
              "Name": "chickpay-private-0",
              "kubernetes.io/cluster/eks-chickpay-service": "shared"
            },
            "vpc_id": "vpc-04c0a129785987422"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:297195401389:subnet/subnet-08553b05a0297ac3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08553b05a0297ac3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "297195401389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chickpay-private-1",
              "kubernetes.io/cluster/eks-chickpay-service": "shared"
            },
            "tags_all": {
              "Name": "chickpay-private-1",
              "kubernetes.io/cluster/eks-chickpay-service": "shared"
            },
            "vpc_id": "vpc-04c0a129785987422"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:297195401389:subnet/subnet-0c6cda4f29da81a4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6cda4f29da81a4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "297195401389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chickpay-public-0",
              "kubernetes.io/cluster/eks-chickpay-service": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "chickpay-public-0",
              "kubernetes.io/cluster/eks-chickpay-service": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04c0a129785987422"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:297195401389:subnet/subnet-0643e2e887ca329d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0643e2e887ca329d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "297195401389",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chickpay-public-1",
              "kubernetes.io/cluster/eks-chickpay-service": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "chickpay-public-1",
              "kubernetes.io/cluster/eks-chickpay-service": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04c0a129785987422"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:297195401389:vpc/vpc-04c0a129785987422",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034e24c3dfcaacbb3",
            "default_route_table_id": "rtb-002fad69ea89f772a",
            "default_security_group_id": "sg-02ef44b97c4caa89d",
            "dhcp_options_id": "dopt-07d4947527f57be9b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c0a129785987422",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002fad69ea89f772a",
            "owner_id": "297195401389",
            "tags": {
              "Name": "vpc-for-eks-chickpay-service"
            },
            "tags_all": {
              "Name": "vpc-for-eks-chickpay-service"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}